fix: fixed notification about succes and background behind uploaded photo

--- a/src/components/AppContent/Modal/index.scss
+++ b/src/components/AppContent/Modal/index.scss
@@ -95,7 +95,13 @@ body.lock {
     &--small {
       font-size: 16px;
     }
+
+    &--notification {
+      margin-right: auto;
+      margin-top: 20px;
+    }
   }
+
   &-drop {
     display: flex;
     justify-content: center;
@@ -111,6 +117,11 @@ body.lock {
     &-bg {
       position: absolute;
       z-index: -1;
+    }
+
+    &--error {
+      background: #fbe0dc;
+      border: 2px dashed #ff868e;
     }
   }
 
